# refl

./: .gitignore  CHANGES.md  COPYING  README.md  dune-project  refl.opam
common/: dune  monad.ml  ppx_refl_common.ml
ppx/: ListExt.ml  common.ml  constraints.ml  dune  indexer.ml  indexer.mli  ppx_refl.ml
runtime/: builtins.ml  compare.ml  convert.ml  desc.ml  dune  enum.ml  eq.ml  fold.ml  hash.ml  iter.ml  lift.ml  make.ml  map.ml  refl.ml  show.ml  tools.ml  visit.ml
tests/absent_variable/: absent_variable.ml  dune
tests/array/: array.ml  dune  test_array.ml
tests/arrow/: arrow.ml  dune
tests/compare/: compare.ml  dune
tests/deep_variables/: deep_variables.ml  dune
tests/enum/: dune  enum.ml
tests/gadt/: dune  gadt.ml
tests/irregular/: dune  irregular.ml  irregular.mli
tests/lazy/: dune  lazy.ml
tests/list_manual/: dune  list_manual.ml
tests/make/: dune  make.ml
tests/many_constructors/: dune  many_constructors.ml
tests/many_recursive_types/: dune  many_recursive_types.ml
tests/mapopaque/: dune  mapopaque.ml
tests/object/: dune  object.ml
tests/opaque/: dune  opaque.ml
tests/poly/: dune  poly.ml
tests/tree/: dune  tree.ml  tree.mli
tests/variant/: dune  variant.ml
